--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,17 +29,24 @@ dist.jar=${dist.dir}/Proyecto_Facturacion.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.iText-5.0.5.jar=C:\\Users\\luisc\\Downloads\\iText-5.0.5.jar
+file.reference.iText7-Core-7.1.3.zip=C:\\Users\\luisc\\Downloads\\iText7-Core-7.1.3.zip
+file.reference.itextpdf-5.4.0.jar.zip=C:\\Users\\luisc\\Downloads\\itextpdf-5.4.0.jar.zip
 file.reference.jcalendar-1.4.jar=C:\\Users\\luisc\\Desktop\\jcalendar-1.4.jar
 file.reference.mssql-jdbc-8.2.0.jre13.jar=C:\\Users\\luisc\\Desktop\\sqljdbc_8.2\\enu\\mssql-jdbc-8.2.0.jre13.jar
 file.reference.mssql-jdbc-8.2.0.jre8.jar=mssql-jdbc-8.2.0.jre8.jar
 file.reference.mysql-connector-java-5.1.48-bin.jar=mysql-connector-java-5.1.48-bin.jar
 includes=**
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.mssql-jdbc-8.2.0.jre13.jar}:\
     ${file.reference.mssql-jdbc-8.2.0.jre8.jar}:\
-    ${file.reference.mysql-connector-java-5.1.48-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.48-bin.jar}:\
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.iText7-Core-7.1.3.zip}:\
+    ${file.reference.itextpdf-5.4.0.jar.zip}:\
+    ${file.reference.iText-5.0.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -63,7 +70,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=main
+main.class=inicio_sesion.Pantalla_Inicio_Sesion
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
