--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,8 +3,8 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=Proyecto_Facturacion
-application.vendor=luisc
+application.title=Daenerys v2
+application.vendor=Luis Cueva and Melvin Alvarez
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -46,7 +46,8 @@ javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.iText7-Core-7.1.3.zip}:\
     ${file.reference.itextpdf-5.4.0.jar.zip}:\
-    ${file.reference.iText-5.0.5.jar}
+    ${file.reference.iText-5.0.5.jar}:\
+    ${libs.beans-binding.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
