--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,7 +37,9 @@ file.reference.mssql-jdbc-8.2.0.jre13.jar=C:\\Users\\luisc\\Desktop\\sqljdbc_8.2
 file.reference.mssql-jdbc-8.2.0.jre8.jar=mssql-jdbc-8.2.0.jre8.jar
 file.reference.mysql-connector-java-5.1.48-bin.jar=mysql-connector-java-5.1.48-bin.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=true
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.mssql-jdbc-8.2.0.jre13.jar}:\
@@ -71,7 +73,20 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=inicio_sesion.Pantalla_Inicio_Sesion
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
