--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,8 @@ file.reference.iText-5.0.5.jar=C:\\Users\\luisc\\Downloads\\iText-5.0.5.jar
 file.reference.iText7-Core-7.1.3.zip=C:\\Users\\luisc\\Downloads\\iText7-Core-7.1.3.zip
 file.reference.itextpdf-5.4.0.jar.zip=C:\\Users\\luisc\\Downloads\\itextpdf-5.4.0.jar.zip
 file.reference.jcalendar-1.4.jar=C:\\Users\\luisc\\Desktop\\jcalendar-1.4.jar
+file.reference.log4j-api-2.13.3.jar=C:\\Users\\Luis Cueva\\Desktop\\cambiosMelvin\\apache-log4j-2.13.3-bin\\log4j-api-2.13.3.jar
+file.reference.log4j-core-2.13.3.jar=C:\\Users\\Luis Cueva\\Desktop\\cambiosMelvin\\apache-log4j-2.13.3-bin\\log4j-core-2.13.3.jar
 file.reference.mssql-jdbc-8.2.0.jre13.jar=C:\\Users\\luisc\\Desktop\\sqljdbc_8.2\\enu\\mssql-jdbc-8.2.0.jre13.jar
 file.reference.mssql-jdbc-8.2.0.jre8.jar=mssql-jdbc-8.2.0.jre8.jar
 file.reference.mysql-connector-java-5.1.48-bin.jar=mysql-connector-java-5.1.48-bin.jar
@@ -49,7 +51,9 @@ javac.classpath=\
     ${file.reference.iText7-Core-7.1.3.zip}:\
     ${file.reference.itextpdf-5.4.0.jar.zip}:\
     ${file.reference.iText-5.0.5.jar}:\
-    ${libs.beans-binding.classpath}
+    ${libs.beans-binding.classpath}:\
+    ${file.reference.log4j-api-2.13.3.jar}:\
+    ${file.reference.log4j-core-2.13.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
