Nuevos iconos xd

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,6 +37,7 @@ file.reference.log4j-1.2.17.jar=C:\\Users\\Luis Cueva\\Desktop\\cambiosMelvin\\l
 file.reference.mssql-jdbc-8.2.0.jre13.jar=C:\\Users\\luisc\\Desktop\\sqljdbc_8.2\\enu\\mssql-jdbc-8.2.0.jre13.jar
 file.reference.mssql-jdbc-8.2.0.jre8.jar=mssql-jdbc-8.2.0.jre8.jar
 file.reference.mysql-connector-java-5.1.48-bin.jar=mysql-connector-java-5.1.48-bin.jar
+file.reference.RSDate.jar=RSDate.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=true
@@ -51,7 +52,8 @@ javac.classpath=\
     ${file.reference.itextpdf-5.4.0.jar.zip}:\
     ${file.reference.iText-5.0.5.jar}:\
     ${libs.beans-binding.classpath}:\
-    ${file.reference.log4j-1.2.17.jar}
+    ${file.reference.log4j-1.2.17.jar}:\
+    ${file.reference.RSDate.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
