--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,13 +29,25 @@ dist.jar=${dist.dir}/Proyecto_Facturacion.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.AbsoluteLayout.jar=C:\\Users\\Luis Cueva\\Documents\\Luis\\UJCV\\Ing Software\\Librerias\\JasperReport\\AbsoluteLayout.jar
+file.reference.commons-collections-2.1.jar=C:\\Users\\Luis Cueva\\Documents\\Luis\\UJCV\\Ing Software\\Librerias\\jasper\\commons-collections-2.1.jar
+file.reference.commons-collections-3.2.1.jar=C:\\Users\\Luis Cueva\\Documents\\Luis\\UJCV\\Ing Software\\Librerias\\JasperReport\\commons-collections-3.2.1.jar
+file.reference.commons-digester-2.1.jar=C:\\Users\\Luis Cueva\\Documents\\Luis\\UJCV\\Ing Software\\Librerias\\JasperReport\\commons-digester-2.1.jar
+file.reference.commons-logging-1.2.jar=C:\\Users\\Luis Cueva\\Documents\\Luis\\UJCV\\Ing Software\\Librerias\\JasperReport\\commons-logging-1.2.jar
+file.reference.groovy-2.4.5.jar=C:\\Users\\Luis Cueva\\Documents\\Luis\\UJCV\\Ing Software\\Librerias\\JasperReport\\groovy-2.4.5.jar
+file.reference.itext-2.1.0.jar=C:\\Users\\Luis Cueva\\Documents\\Luis\\UJCV\\Ing Software\\Librerias\\jasper\\itext-2.1.0.jar
 file.reference.iText-5.0.5.jar=C:\\Users\\luisc\\Downloads\\iText-5.0.5.jar
+file.reference.itext-pdfa-5.5.4.jar=C:\\Users\\Luis Cueva\\Documents\\Luis\\UJCV\\Ing Software\\Librerias\\JasperReport\\itext-pdfa-5.5.4.jar
+file.reference.itext-pdfa-5.5.4__1_.jar=C:\\Users\\Luis Cueva\\Documents\\Luis\\UJCV\\Ing Software\\Librerias\\JasperReport\\itext-pdfa-5.5.4 (1).jar
 file.reference.iText7-Core-7.1.3.zip=C:\\Users\\luisc\\Downloads\\iText7-Core-7.1.3.zip
 file.reference.itextpdf-5.4.0.jar.zip=C:\\Users\\luisc\\Downloads\\itextpdf-5.4.0.jar.zip
+file.reference.itextpdf-5.5.4.jar=C:\\Users\\Luis Cueva\\Documents\\Luis\\UJCV\\Ing Software\\Librerias\\JasperReport\\itextpdf-5.5.4.jar
+file.reference.jasperreports-6.0.0.jar=C:\\Users\\Luis Cueva\\Documents\\Luis\\UJCV\\Ing Software\\Librerias\\JasperReport\\jasperreports-6.0.0.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\luisc\\Desktop\\jcalendar-1.4.jar
 file.reference.log4j-1.2.17.jar=C:\\Users\\Luis Cueva\\Desktop\\cambiosMelvin\\log4j-1.2.17.jar
 file.reference.mssql-jdbc-8.2.0.jre13.jar=C:\\Users\\luisc\\Desktop\\sqljdbc_8.2\\enu\\mssql-jdbc-8.2.0.jre13.jar
 file.reference.mssql-jdbc-8.2.0.jre8.jar=mssql-jdbc-8.2.0.jre8.jar
+file.reference.mysql-connector-java-5.0.8-bin.jar=C:\\Users\\Luis Cueva\\Documents\\Luis\\UJCV\\Ing Software\\Librerias\\JasperReport\\mysql-connector-java-5.0.8-bin.jar
 file.reference.mysql-connector-java-5.1.48-bin.jar=mysql-connector-java-5.1.48-bin.jar
 file.reference.RSDate.jar=RSDate.jar
 includes=**
@@ -53,7 +65,19 @@ javac.classpath=\
     ${file.reference.iText-5.0.5.jar}:\
     ${libs.beans-binding.classpath}:\
     ${file.reference.log4j-1.2.17.jar}:\
-    ${file.reference.RSDate.jar}
+    ${file.reference.RSDate.jar}:\
+    ${file.reference.commons-collections-2.1.jar}:\
+    ${file.reference.itext-2.1.0.jar}:\
+    ${file.reference.AbsoluteLayout.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.groovy-2.4.5.jar}:\
+    ${file.reference.itext-pdfa-5.5.4__1_.jar}:\
+    ${file.reference.itext-pdfa-5.5.4.jar}:\
+    ${file.reference.itextpdf-5.5.4.jar}:\
+    ${file.reference.jasperreports-6.0.0.jar}:\
+    ${file.reference.mysql-connector-java-5.0.8-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
