--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -5,6 +5,7 @@ annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=Daenerys v2
 application.vendor=Luis Cueva and Melvin Alvarez
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -31,6 +32,10 @@ endorsed.classpath=
 excludes=
 file.reference.AbsoluteLayout.jar=C:\\Users\\Luis Cueva\\Documents\\Luis\\UJCV\\Ing Software\\Librerias\\JasperReport\\AbsoluteLayout.jar
 file.reference.AbsoluteLayout.jar-1=C:\\Users\\Luis Cueva\\Documents\\Luis\\UJCV\\Ing Software\\Librerias\\lib\\AbsoluteLayout.jar
+file.reference.commons-codec-1.6-javadoc.jar=C:\\Users\\Luis Cueva\\Documents\\Luis\\UJCV\\Ing Software\\Librerias\\commons-codec-1.6-javadoc.jar
+file.reference.commons-codec-1.6-sources.jar=C:\\Users\\Luis Cueva\\Documents\\Luis\\UJCV\\Ing Software\\Librerias\\commons-codec-1.6-sources.jar
+file.reference.commons-codec-1.6-tests.jar=C:\\Users\\Luis Cueva\\Documents\\Luis\\UJCV\\Ing Software\\Librerias\\commons-codec-1.6-tests.jar
+file.reference.commons-codec-1.6.jar=C:\\Users\\Luis Cueva\\Documents\\Luis\\UJCV\\Ing Software\\Librerias\\commons-codec-1.6.jar
 file.reference.commons-collections-2.1.jar=C:\\Users\\Luis Cueva\\Documents\\Luis\\UJCV\\Ing Software\\Librerias\\jasper\\commons-collections-2.1.jar
 file.reference.commons-collections-3.2.1.jar=C:\\Users\\Luis Cueva\\Documents\\Luis\\UJCV\\Ing Software\\Librerias\\JasperReport\\commons-collections-3.2.1.jar
 file.reference.commons-digester-2.1.jar=C:\\Users\\Luis Cueva\\Documents\\Luis\\UJCV\\Ing Software\\Librerias\\JasperReport\\commons-digester-2.1.jar
@@ -51,7 +56,6 @@ file.reference.JPlaceHolder.jar=C:\\Users\\Luis Cueva\\Documents\\Luis\\UJCV\\In
 file.reference.JPlaceHolderPassw.jar=C:\\Users\\Luis Cueva\\Documents\\Luis\\UJCV\\Ing Software\\Librerias\\lib\\JPlaceHolderPassw.jar
 file.reference.log4j-1.2.17.jar=C:\\Users\\Luis Cueva\\Desktop\\cambiosMelvin\\log4j-1.2.17.jar
 file.reference.mssql-jdbc-8.2.0.jre13.jar=C:\\Users\\luisc\\Desktop\\sqljdbc_8.2\\enu\\mssql-jdbc-8.2.0.jre13.jar
-file.reference.mssql-jdbc-8.2.0.jre8.jar=mssql-jdbc-8.2.0.jre8.jar
 file.reference.mysql-connector-java-5.0.8-bin.jar=C:\\Users\\Luis Cueva\\Documents\\Luis\\UJCV\\Ing Software\\Librerias\\JasperReport\\mysql-connector-java-5.0.8-bin.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Users\\Luis Cueva\\Documents\\Luis\\UJCV\\Ing Software\\Librerias\\lib\\mysql-connector-java-5.1.23-bin.jar
 file.reference.mysql-connector-java-5.1.48-bin.jar=mysql-connector-java-5.1.48-bin.jar
@@ -63,7 +67,6 @@ jar.compress=true
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.mssql-jdbc-8.2.0.jre13.jar}:\
-    ${file.reference.mssql-jdbc-8.2.0.jre8.jar}:\
     ${file.reference.mysql-connector-java-5.1.48-bin.jar}:\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.iText7-Core-7.1.3.zip}:\
@@ -91,10 +94,15 @@ javac.classpath=\
     ${file.reference.JPlaceHolderPassw.jar}:\
     ${file.reference.edisoncorSX.jar}:\
     ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
-    ${file.reference.swingx-core-1.6.2-2.jar}
+    ${file.reference.swingx-core-1.6.2-2.jar}:\
+    ${file.reference.commons-codec-1.6-javadoc.jar}:\
+    ${file.reference.commons-codec-1.6-sources.jar}:\
+    ${file.reference.commons-codec-1.6-tests.jar}:\
+    ${file.reference.commons-codec-1.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -125,6 +133,10 @@ jnlp.signing=
 jnlp.signing.alias=
 jnlp.signing.keystore=
 main.class=inicio_sesion.Pantalla_Inicio_Sesion
+# Optional override of default Application-Library-Allowable-Codebase attribute identifying the locations where your signed RIA is expected to be found.
+manifest.custom.application.library.allowable.codebase=
+# Optional override of default Caller-Allowable-Codebase attribute identifying the domains from which JavaScript code can make calls to your RIA without security prompts.
+manifest.custom.caller.allowable.codebase=
 # Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
 manifest.custom.codebase=
 # Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
